@startuml

title __SENTIMENT's Class Diagram__\n

  package com.koltunm.skanner {
    package com.koltunm.skanner.sentiment {
      class Analyser {
          - pipeline : StanfordCoreNLP
          + Analyser()
          + getSentimentScore()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.sentiment {
      class AnalyserTask {
          - toAnalyze : ConcurrentLinkedQueue<SentimentAnalyzable>
          + AnalyserTask()
          + run()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.sentiment {
      class OverallScore {
          - sentenceScoreList : List<SentenceScore>
          + OverallScore()
          + mergeScore()
          + getClassification()
          + setSentenceScoreList()
          + toString()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.sentiment {
      abstract class Score {
          - matrix : SimpleMatrix
          {abstract} + getClassification()
          + getType()
          + getMatrix()
          + setMatrix()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.sentiment {
      class ScoreClassification {
          - veryNegative : int
          - negative : int
          - neutral : int
          - positive : int
          - veryPositive : int
          - scoreMap : TreeMap<Integer, SentimentType>
          + ScoreClassification()
          + ScoreClassification()
          - set()
          + getSentimentType()
          + toString()
          + getVeryNegative()
          + setVeryNegative()
          + getNegative()
          + setNegative()
          + getNeutral()
          + setNeutral()
          + getPositive()
          + setPositive()
          + getVeryPositive()
          + setVeryPositive()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.sentiment {
      class SentenceScore {
          + SentenceScore()
          + getClassification()
          + toString()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.sentiment {
      abstract class SentimentAnalyzable {
          - timesAnalyzed : int
          {abstract} + sentimentString()
          {abstract} + getSentimentHeading()
          {abstract} + getDateTime()
          + getSentimentScore()
          + getSentimentType()
          + getVeryNegative()
          + getNegative()
          + getNeutral()
          + getPositive()
          + getVeryPositive()
          + inc()
          + getCount()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.sentiment {
      enum SentimentType {
        VERY_NEGATIVE
        NEGATIVE
        NEUTRAL
        POSITIVE
        VERY_POSITIVE
        type
      }
    }
  }
  

  AnalyserTask -up-|> Runnable
  AnalyserTask o-- Analyser : analyser
  OverallScore -up-|> Score
  SentenceScore -up-|> Score
  SentimentAnalyzable o-- OverallScore : sentimentScore


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
